<resources>
    <string name="app_name">Blood Hero</string>
    <string name="nome">Nome</string>
    <string name="address">Endereço</string>
    <string name="phone">Telefone</string>
    <string name="salvar">Salvar</string>
    <string name="rankings">Rankings</string>
    <string name="campaigns">Campanhas</string>
    <string name="leave">Sair</string>
    <string-array name="genre">
        <item>Masculino</item>
        <item>Feminino</item>
    </string-array>
    <string-array name="blood_type">
        <item>O+</item>
        <item>O-</item>
        <item>AB+</item>
        <item>AB-</item>
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_donation">Nova Doação</string>
    <string name="new_hospital">Novo Hospital</string>
    <string name="genre">Sexo</string>
</resources>
