<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_receiver_register"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <EditText
        android:id="@+id/receiver_register_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nome"/>

    <Spinner
        android:id="@+id/receiver_register_genre"
        android:entries="@array/genre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/receiver_register_address"
        android:hint="@string/address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/receiver_register_phone"
        android:hint="@string/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Spinner
        android:id="@+id/receiver_register_bloodType"
        android:entries="@array/blood_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/receiver_register_button_save"
        android:text="@string/salvar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
